[package]
name = "serde-value-wasm"
version = "0.7.0"
authors = ["arcmx", "Bartłomiej Kuras", "CyberHoward", "Nicolas"]
edition = "2018"

description = "Serialization value trees for CosmWasm"
repository = "https://github.com/Abstract-OS/serde-value-wasm"
readme = "README.md"
keywords = ["serde", "wasm"]
license = "MIT"

[features]
# Implement `JsonSchema` on `Value`
json_schema = []
# Implement `Into<CosmosMsg>` for use in CosmWasm responses
cosmos_msg = []

[dependencies]
serde = "^1.0.0"
schemars = { version = "0.8", default-features = false}
cosmwasm-std = { version = "1.2", default-features = false }

[dev-dependencies]
serde_derive = "^1.0.0"
